# health-check

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  devenv.nix  devenv.yaml
.github/workflows/: agent-image-build.yml  zig-bitsearch-health-check.yml  zig-hello-world-wasm-build.yml
bitseach-health/: build.zig  build.zig.zon
bitseach-health/src/: main.zig
bitsearch-health/: .gitignore  build.zig
bitsearch-health/src/: main.zig
elisa/: README.md  bun.lockb  devenv.nix  package.json
elisa/src/: index.ts
elisa/src/artifacts/: index.ts
src/: main.rs
src/api/: mod.rs
src/persistency/: mod.rs
src/threads/: dll_runner.rs  dll_worker.rs  mod.rs  wasm_runner.rs  wasm_worker.rs
src/types/: mod.rs
weather-detector/: .gitignore  build.zig  build.zig.zon  devenv.nix
weather-detector/src/: main.zig
zig-hello-wasm/: .gitignore  build.zig  devenv.nix  main.zig
