[package]
name = "health-check"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["http1", "tokio"], default-features = false }
defer = "0.2.1"
indicatif = { version = "0.17.9", default-features = false }
libloading = "0.8.6"
sqlite = "0.36.1"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
wasmer = { version = "5.0.3", features = ["sys"], default-features = false }
wasmer-wasix = { version = "0.33.0", features = ["sys"], default-features = false }
